# embassy

embassy-hal-common/src/: peripheral.rs
embassy-hal-common/src/usb/: mod.rs  usb_serial.rs
embassy-nrf/: Cargo.toml
embassy-nrf/src/: lib.rs  usbd.rs
embassy-nrf/src/chips/: nrf52840.rs
embassy-stm32/src/: lib.rs
embassy-stm32/src/dma/: bdma.rs  dma.rs  mod.rs
embassy-stm32/src/eth/: mod.rs
embassy-stm32/src/eth/v1c/: descriptors.rs  mod.rs  rx_desc.rs  tx_desc.rs
embassy-stm32/src/rcc/: mod.rs
embassy-stm32/src/timer/: basic_timer.rs  mod.rs
embassy/src/: interrupt.rs
examples/nrf/: Cargo.toml
examples/stm32f7/: Cargo.toml
examples/stm32f7/src/: example_common.rs
examples/stm32h7/: Cargo.toml
